--- a/templates/default/elasticsearch.init.erb
+++ b/templates/default/elasticsearch.init.erb
@@ -23,7 +23,7 @@ start() {
       return 1
     else
       echo -e "\033[1mStarting elasticsearch...\033[0m"
-      su - <%= node[:elasticsearch][:user] %> -m -c "ES_INCLUDE=$ES_INCLUDE /usr/local/bin/elasticsearch -p $PIDFILE"
+      su - <%= node[:elasticsearch][:user] %> -c "ES_INCLUDE=$ES_INCLUDE /usr/local/bin/elasticsearch -p $PIDFILE"
     fi
     return $?
 }
@@ -36,12 +36,12 @@ stop() {
       if [ ! $CHECK_PID_RUNNING ]; then
         echo -e "\033[1mPID file found, but no matching process running?\033[0m"
         echo    "Removing PID file..."
-        su <%= node[:elasticsearch][:user] %> -m -c "rm $PIDFILE"
+        su <%= node[:elasticsearch][:user] %> -c "rm $PIDFILE"
         exit 0
       fi
 
       # KILL PROCESS
-      su <%= node[:elasticsearch][:user] %> -m -c "kill $(cat $PIDFILE)"
+      su <%= node[:elasticsearch][:user] %> -c "kill $(cat $PIDFILE)"
       r=$?
       timeout=0
       while [ -f $PIDFILE  ]; do
